--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -26,3 +26,7 @@
 html[data-theme='dark'] .docusaurus-highlight-code-line {
   background-color: rgba(0, 0, 0, 0.3);
 }
+
+details {
+  background : var(--ifm-color-secondary-light);
+}
